--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <input type="checkbox" id="menu" class="container__botao">
             <label for="menu" class="container__rotulo">
-                <span class="cabeçalho_menu-hamburguer container_imagem"></span>
+                <span class="cabeçalho__menu-hamburguer container__imagem"></span>
             </label>
             <ul class="lista-menu">
                 <li class="lista-menu__titulo">Categorias</li>
@@ -40,7 +40,7 @@
                 </li>
             </ul>
             <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
-            <h1 class="container_titulo"><b class="container_titulo--negrito">Alura</b>Books</h1>
+            <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
         </div>
 
         <ul class="opções">
@@ -72,7 +72,8 @@
         </ul>
 
         <div class="container">
-            
+            <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"
+                    class="container__imagem container__imagem-transparente"></a>
             <a href="#" class="container__link">
                 <img src="img/Compras.svg" alt="Carrinhos de compras" class="container__imagem">
                 <p class="container__texto">Minha sacola</p>
